{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 1394,
  "lineage": "ce5583ef-1fce-5320-474a-33d64be4a4c2",
  "resources": [
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "wikijs_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:500165950435:loadbalancer/app/wikijs-alb/da05944cb1b0957e",
            "arn_suffix": "app/wikijs-alb/da05944cb1b0957e",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "wikijs-alb-1654410187.eu-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-west-1:500165950435:loadbalancer/app/wikijs-alb/da05944cb1b0957e",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "wikijs-alb",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0ba6f61e0c5c5b879"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-06ed74fe6f99388f3"
              },
              {
                "subnet_id": "subnet-0d8e89fb5993b9ce9"
              }
            ],
            "subnets": [
              "subnet-06ed74fe6f99388f3",
              "subnet-0d8e89fb5993b9ce9"
            ],
            "tags": {
              "Name": "wikijs-alb"
            },
            "tags_all": {
              "Name": "wikijs-alb"
            },
            "vpc_id": "vpc-045f533d506f79c02",
            "xff_header_processing_mode": "append",
            "zone_id": "Z32O12XQLNTSW2"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public_a",
            "module.vpc.aws_subnet.public_b",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:500165950435:listener/app/wikijs-alb/da05944cb1b0957e/28403ddbd6fad853",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-west-1:500165950435:targetgroup/wikijs-tg/5af69b198cfb1fd8",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:500165950435:listener/app/wikijs-alb/da05944cb1b0957e/28403ddbd6fad853",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-west-1:500165950435:loadbalancer/app/wikijs-alb/da05944cb1b0957e",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.alb.aws_lb.wikijs_alb",
            "module.alb.aws_lb_target_group.wikijs_tg",
            "module.security.aws_security_group.alb_sg",
            "module.vpc.aws_subnet.public_a",
            "module.vpc.aws_subnet.public_b",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.alb",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "wikijs_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-west-1:500165950435:targetgroup/wikijs-tg/5af69b198cfb1fd8",
            "arn_suffix": "targetgroup/wikijs-tg/5af69b198cfb1fd8",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-west-1:500165950435:targetgroup/wikijs-tg/5af69b198cfb1fd8",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancer_arns": [
              "arn:aws:elasticloadbalancing:eu-west-1:500165950435:loadbalancer/app/wikijs-alb/da05944cb1b0957e"
            ],
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "wikijs-tg",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "wikijs-tg"
            },
            "tags_all": {
              "Name": "wikijs-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-045f533d506f79c02"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:500165950435:security-group/sg-0ba6f61e0c5c5b879",
            "description": "Allow HTTP/HTTPS traffic from internet",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ba6f61e0c5c5b879",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "wikijs-alb-sg",
            "name_prefix": "",
            "owner_id": "500165950435",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wikijs-alb-sg"
            },
            "tags_all": {
              "Name": "wikijs-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-045f533d506f79c02"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:500165950435:security-group/sg-073c4e734d9439d98",
            "description": "Allow traffic from ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-073c4e734d9439d98",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0ba6f61e0c5c5b879"
                ],
                "self": false,
                "to_port": 3000
              }
            ],
            "name": "wikijs-ecs-tasks-sg",
            "name_prefix": "",
            "owner_id": "500165950435",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wikijs-ecs-tasks-sg"
            },
            "tags_all": {
              "Name": "wikijs-ecs-tasks-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-045f533d506f79c02"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_security_group.alb_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:500165950435:security-group/sg-01aae0d81b1cc8f08",
            "description": "Allow PostgreSQL from ECS tasks only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01aae0d81b1cc8f08",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-073c4e734d9439d98"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "wikijs-rds-sg",
            "name_prefix": "",
            "owner_id": "500165950435",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "wikijs-rds-sg"
            },
            "tags_all": {
              "Name": "wikijs-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-045f533d506f79c02"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_security_group.alb_sg",
            "module.security.aws_security_group.ecs_tasks_sg",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.security",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "vpc_endpoint_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:500165950435:security-group/sg-0b8c54e6160241d1f",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b8c54e6160241d1f",
            "ingress": [
              {
                "cidr_blocks": [
                  "10.0.11.0/24",
                  "10.0.12.0/24"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              }
            ],
            "name": "vpc-endpoints-sg",
            "name_prefix": "",
            "owner_id": "500165950435",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "vpc-endpoints-sg"
            },
            "tags_all": {
              "Name": "vpc-endpoints-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-045f533d506f79c02"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_subnet.private_a",
            "module.vpc.aws_subnet.private_b",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09993dd28e3e12d2e",
            "arn": "arn:aws:ec2:eu-west-1:500165950435:elastic-ip/eipalloc-09993dd28e3e12d2e",
            "association_id": "eipassoc-0f6e9aa0f78115c42",
            "domain": "vpc",
            "id": "eipalloc-09993dd28e3e12d2e",
            "network_border_group": "eu-west-1",
            "network_interface": "eni-0001582ab4d8a9411",
            "private_dns": "ip-10-0-1-133.eu-west-1.compute.internal",
            "private_ip": "10.0.1.133",
            "public_dns": "ec2-54-216-160-8.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.216.160.8",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:500165950435:internet-gateway/igw-0c7e78f861d19fe39",
            "id": "igw-0c7e78f861d19fe39",
            "owner_id": "500165950435",
            "tags": {
              "Name": "wikijs-igw"
            },
            "tags_all": {
              "Name": "wikijs-igw"
            },
            "vpc_id": "vpc-045f533d506f79c02"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-09993dd28e3e12d2e",
            "association_id": "eipassoc-0f6e9aa0f78115c42",
            "connectivity_type": "public",
            "id": "nat-001a8bb6ab36b8e78",
            "network_interface_id": "eni-0001582ab4d8a9411",
            "private_ip": "10.0.1.133",
            "public_ip": "54.216.160.8",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0d8e89fb5993b9ce9",
            "tags": {
              "Name": "wikijs-nat"
            },
            "tags_all": {
              "Name": "wikijs-nat"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_subnet.public_a",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:500165950435:route-table/rtb-042e97aa2e7eb554b",
            "id": "rtb-042e97aa2e7eb554b",
            "owner_id": "500165950435",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-001a8bb6ab36b8e78",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "wikijs-private-rt"
            },
            "tags_all": {
              "Name": "wikijs-private-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-045f533d506f79c02"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_subnet.public_a",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:500165950435:route-table/rtb-04dcf68de4bd7bf70",
            "id": "rtb-04dcf68de4bd7bf70",
            "owner_id": "500165950435",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0c7e78f861d19fe39",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "wikijs-public-rt"
            },
            "tags_all": {
              "Name": "wikijs-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-045f533d506f79c02"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-04b14231107cac062",
            "route_table_id": "rtb-042e97aa2e7eb554b",
            "subnet_id": "subnet-0ebd70e30d6cc4359"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_a",
            "module.vpc.aws_subnet.public_a",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09bb41b110fe6edca",
            "route_table_id": "rtb-042e97aa2e7eb554b",
            "subnet_id": "subnet-07323092dd72d0594"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_nat_gateway.nat",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private_b",
            "module.vpc.aws_subnet.public_a",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08140ad929ee06cb4",
            "route_table_id": "rtb-04dcf68de4bd7bf70",
            "subnet_id": "subnet-0d8e89fb5993b9ce9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public_a",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d1f852ac1fc85f0a",
            "route_table_id": "rtb-04dcf68de4bd7bf70",
            "subnet_id": "subnet-06ed74fe6f99388f3"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public_b",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:500165950435:subnet/subnet-0ebd70e30d6cc4359",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0ebd70e30d6cc4359",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "500165950435",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wikijs-private-a"
            },
            "tags_all": {
              "Name": "wikijs-private-a"
            },
            "vpc_id": "vpc-045f533d506f79c02"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:500165950435:subnet/subnet-07323092dd72d0594",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07323092dd72d0594",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "500165950435",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wikijs-private-b"
            },
            "tags_all": {
              "Name": "wikijs-private-b"
            },
            "vpc_id": "vpc-045f533d506f79c02"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:500165950435:subnet/subnet-0d8e89fb5993b9ce9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d8e89fb5993b9ce9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "500165950435",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wikijs-public-a"
            },
            "tags_all": {
              "Name": "wikijs-public-a"
            },
            "vpc_id": "vpc-045f533d506f79c02"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:500165950435:subnet/subnet-06ed74fe6f99388f3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1b",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06ed74fe6f99388f3",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "500165950435",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wikijs-public-b"
            },
            "tags_all": {
              "Name": "wikijs-public-b"
            },
            "vpc_id": "vpc-045f533d506f79c02"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:500165950435:vpc/vpc-045f533d506f79c02",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0082fd12ce41ca470",
            "default_route_table_id": "rtb-0636ac04d0ef74068",
            "default_security_group_id": "sg-0e9c4888b1364a26c",
            "dhcp_options_id": "dopt-0e57d45e6690a7f91",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-045f533d506f79c02",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0636ac04d0ef74068",
            "owner_id": "500165950435",
            "tags": {
              "Name": "wikijs-vpc"
            },
            "tags_all": {
              "Name": "wikijs-vpc"
            }
          },
          "identity_schema_version": 0
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "logs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:500165950435:vpc-endpoint/vpce-03c3f443f04f56497",
            "dns_entry": [
              {
                "dns_name": "vpce-03c3f443f04f56497-zyaajl7f.logs.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-03c3f443f04f56497-zyaajl7f-eu-west-1b.logs.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-03c3f443f04f56497-zyaajl7f-eu-west-1a.logs.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-03c3f443f04f56497",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-00a34d34c4e676626",
              "eni-0e823489d26151f4a"
            ],
            "owner_id": "500165950435",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0b8c54e6160241d1f"
            ],
            "service_name": "com.amazonaws.eu-west-1.logs",
            "service_region": "eu-west-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.11.221",
                "subnet_id": "subnet-0ebd70e30d6cc4359"
              },
              {
                "ipv4": "10.0.12.178",
                "subnet_id": "subnet-07323092dd72d0594"
              }
            ],
            "subnet_ids": [
              "subnet-07323092dd72d0594",
              "subnet-0ebd70e30d6cc4359"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-045f533d506f79c02"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_security_group.vpc_endpoint_sg",
            "module.vpc.aws_subnet.private_a",
            "module.vpc.aws_subnet.private_b",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc_endpoint",
      "name": "secretsmanager",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:500165950435:vpc-endpoint/vpce-05521d4b0d073ec75",
            "dns_entry": [
              {
                "dns_name": "vpce-05521d4b0d073ec75-fdwycdwj.secretsmanager.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-05521d4b0d073ec75-fdwycdwj-eu-west-1a.secretsmanager.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              },
              {
                "dns_name": "vpce-05521d4b0d073ec75-fdwycdwj-eu-west-1b.secretsmanager.eu-west-1.vpce.amazonaws.com",
                "hosted_zone_id": "Z38GZ743OKFT7T"
              }
            ],
            "dns_options": [
              {
                "dns_record_ip_type": "ipv4",
                "private_dns_only_for_inbound_resolver_endpoint": false
              }
            ],
            "id": "vpce-05521d4b0d073ec75",
            "ip_address_type": "ipv4",
            "network_interface_ids": [
              "eni-02812924564ab9032",
              "eni-0a540aec527dbe8ac"
            ],
            "owner_id": "500165950435",
            "policy": "{\"Statement\":[{\"Action\":\"*\",\"Effect\":\"Allow\",\"Principal\":\"*\",\"Resource\":\"*\"}]}",
            "private_dns_enabled": false,
            "requester_managed": false,
            "security_group_ids": [
              "sg-0b8c54e6160241d1f"
            ],
            "service_name": "com.amazonaws.eu-west-1.secretsmanager",
            "service_region": "eu-west-1",
            "state": "available",
            "subnet_configuration": [
              {
                "ipv4": "10.0.11.14",
                "subnet_id": "subnet-0ebd70e30d6cc4359"
              },
              {
                "ipv4": "10.0.12.157",
                "subnet_id": "subnet-07323092dd72d0594"
              }
            ],
            "subnet_ids": [
              "subnet-07323092dd72d0594",
              "subnet-0ebd70e30d6cc4359"
            ],
            "vpc_endpoint_type": "Interface",
            "vpc_id": "vpc-045f533d506f79c02"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.security.aws_security_group.vpc_endpoint_sg",
            "module.vpc.aws_subnet.private_a",
            "module.vpc.aws_subnet.private_b",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    }
  ]
}